// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createStorageSlice updateFromTimelineV2Data when already has new item does not change state 1`] = `
Object {
  "nodes": Object {
    "issues": Object {
      "1": Object {
        "timeline": Object {
          "map": Object {
            "0": Object {
              "items": Array [
                "YcCall:2",
              ],
            },
            "YcCall:2": Object {},
          },
        },
      },
    },
  },
}
`;

exports[`createStorageSlice updateFromTimelineV2Data when has no issue does not change state 1`] = `Object {}`;

exports[`createStorageSlice updateFromTimelineV2Data when has no map[0] does not change state 1`] = `
Object {
  "nodes": Object {
    "issues": Object {
      "1": Object {
        "timeline": Object {
          "map": Object {},
        },
      },
    },
  },
}
`;

exports[`createStorageSlice updateFromTimelineV2Data when has no new item changes state 1`] = `
Object {
  "calls": Object {
    "2": Object {
      "data": Object {
        "eType": "YcCall",
      },
      "key": "value",
    },
  },
  "managerActivities": Object {},
  "nodes": Object {
    "issues": Object {
      "1": Object {
        "timeline": Object {
          "map": Object {
            "0": Object {
              "counter": NaN,
              "items": Array [
                "Mail:0",
                "YcCall:2",
              ],
            },
            "Mail:0": Object {},
            "YcCall:2": Object {
              "counter": 0,
              "eof": true,
              "id": 2,
              "items": Array [],
            },
          },
        },
      },
    },
  },
}
`;
